css/index.css
/* Базовые стили */
body {
    margin: 0;
    font-family: 'Roboto', sans-serif;
    line-height: 1.6;
    background-color: #f7f9fc;
    color: #333;
}

header {
    background-color: #0047AB;
    color: white;
    padding: 1.5rem 2rem;
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
}

/* Логотип */
.logo {
    font-size: 1.8rem;
    font-weight: 600;
    letter-spacing: 1px;
}

/* Меню */
.menu {
    list-style: none;
    display: flex;
    gap: 1.5rem;
    margin: 0;
    padding: 0;
}

.menu li a {
    color: white;
    text-decoration: none;
    font-weight: 600;
    /* Сделать текст жирным */
    font-size: 1.1rem;
    /* Немного увеличить размер шрифта */
    transition: color 0.3s, text-decoration 0.3s;
}

.menu li a:hover {
    text-decoration: underline;
    color: #ffcc00;
    /* Подсветка при наведении */
}

.menu-toggle {
    display: none;
    background-color: transparent;
    border: none;
    font-size: 2rem;
    color: white;
    cursor: pointer;
}

.menu li a.active {
    color: #ffcc00;
    /* Жёлтый цвет для выделенной ссылки */
    font-weight: bold;
    /* Жирный шрифт для выделенной ссылки */
    border-bottom: 2px solid #ffcc00;
    /* Подчёркивание для активной ссылки */
}






/* Hero */
.hero {
    background: linear-gradient(to right, #0047AB, #0062cc);
    color: white;
    text-align: center;
    padding: 6rem 2rem;
}

.hero h1 {
    font-size: 3rem;
    margin-bottom: 1.5rem;
    font-weight: 700;
}

.hero p {
    font-size: 1.4rem;
    font-weight: 300;
    color: #f4f4f9;
    line-height: 1.8;
    max-width: 700px;
    margin: 0 auto;
}

.cta-button {
    background-color: #0047AB;
    color: white;
    padding: 1rem;
    font-size: 1.1rem;
    border: none;
    border-radius: 8px;
    cursor: pointer;
    transition: background-color 0.3s ease;
    margin-top: 1rem;

}

.cta-button:hover {
    background-color: #003580;
}

/* About Section */
.about {
    background-color: #ffffff;
    padding: 4rem 2rem;
    text-align: center;
    box-shadow: 0 4px 16px rgba(0, 0, 0, 0.1);
}

.about h2 {
    font-size: 2.5rem;
    margin-bottom: 2rem;
    color: #0047AB;
}

.about .content {
    display: flex;
    flex-direction: column;
    gap: 2rem;
    justify-content: center;
    align-items: center;
    max-width: 1200px;
    margin: 0 auto;
    padding: 2rem;
}

.about-img {
    width: 100%;
    max-width: 1200px;
    height: auto;
    border-radius: 12px;
    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
    margin-top: 1rem;
}

.about .text {
    font-size: 1.2rem;
    color: #333;
    text-align: justify;
    padding: 1rem;
    word-wrap: break-word;
}

/* Benefits Section */
.benefits {
    max-width: 1200px;
    margin: 0 auto;
    background-color: #f9f9f9;
    padding: 4rem 2rem;
    text-align: center;
}

.benefits h2 {
    font-size: 2.8rem;
    color: #0047AB;
    margin-bottom: 2rem;
}

.benefit-item {
    background-color: #ffffff;
    line-height: 1.4rem;
    border-radius: 12px;
    box-shadow: 0 6px 18px rgba(0, 0, 0, 0.1);
    text-align: center;
    padding: 2rem;
    max-width: 300px;
    max-height: 350px;
    transition: transform 0.3s ease, box-shadow 0.3s ease;
}

/* Сделать последний элемент на всю ширину при переносе */
.benefit-list {
    display: flex;
    flex-wrap: wrap;
    gap: 2rem;
    justify-content: space-evenly;
    margin: 0 auto;
}

.benefit-item:last-child {
    width: 100%;
    /* Занимает всю ширину контейнера */
}

/* Адаптивность */
@media (max-width: 768px) {
    .benefit-item {
        max-width: 100%;
        /* Переключаем на 100% для всех элементов на мобильных */
    }

    .benefit-item:last-child {
        width: 100%;
        /* Обеспечиваем, что последний элемент тоже на всю ширину */
    }
}


.benefit-item:hover {
    transform: translateY(-10px);
    box-shadow: 0 12px 24px rgba(0, 0, 0, 0.2);
}

.benefit-item img {
    width: 100%;
    height: 60%;
    border-radius: 10px;
    margin-bottom: 1rem;
}

.benefit-item p {
    font-size: 1.2rem;
    color: #333;
}

/* Transaction Simulator */
.transaction-simulator {
    display: flex;
    flex-direction: column;
    max-width: 1200px;
    gap: 1.5rem;
    margin: 0 auto;
    font-size: 1.2rem;
    padding: 4rem 2rem;
    background-color: #ffffff;
    border-radius: 12px;
    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.1);
}

.transaction-simulator input,
.transaction-simulator button {
    width: 100%;
    padding: 1rem;
    font-size: 1.1rem;
    border-radius: 8px;
    border: 1px solid #ccc;
    margin-bottom: 1rem;
}

.transaction-simulator button {
    background-color: #0047AB;
    color: white;
    border: none;
    cursor: pointer;
    transition: background-color 0.3s ease;
}

.transaction-simulator button:hover {
    background-color: #003580;
}


/* Blockchain Section */
#blockchain {
    margin: 2rem auto;
    padding: 2rem;
    max-width: 1200px;
    background-color: #f1f1f1;
    border-radius: 12px;
}

#blocks {
    display: flex;
    justify-content: center;
    gap: 2rem;
    flex-wrap: wrap;
}

.block {
    background-color: #eaf2ff;
    border: 1px solid #0047AB;
    border-radius: 10px;
    width: 220px;
    height: 220px;
    line-height: 1.3rem;
    text-align: center;
    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
}

.block h4 {
    color: #0047AB;
    font-size: 1.2rem;
    margin-bottom: 0.5rem;
}

.block p {
    font-size: 1rem;
    color: #333;
}

/* Адаптивность */
@media (max-width: 768px) {
    header {
        padding: 1rem 1.5rem;
    }

    .hero h1 {
        font-size: 2.5rem;
    }

    .hero p {
        font-size: 1.1rem;
    }

    .menu {
        display: none;
        flex-direction: column;
        gap: 1rem;
        width: 100%;
        text-align: center;
    }

    .menu-toggle {
        display: block;
    }

    .menu.open {
        display: flex;
    }

    .about .content {
        flex-direction: column;
        padding: 1.5rem;
    }

    .benefit-item {
        max-width: 100%;
    }

    .cta-button {
        font-size: 1rem;
        padding: 0.6rem 1.5rem;
    }

    .transaction-simulator {
        max-width: 100%;
    }

    .benefit-item img {
        max-width: 300px;
        height: 250px;
    }
}

@media (max-width: 480px) {
    .menu li a {
        font-size: 0.9rem;
    }

    .benefits h2 {
        font-size: 2.2rem;
    }

    .cta-button {
        padding: 0.5rem 1rem;
        font-size: 0.9rem;
    }

    .hero {
        padding: 4rem 1.5rem;
    }

    .contacts h2 {
        font-size: 2rem;
    }

    .transaction-simulator input,
    .transaction-simulator button {
        font-size: 1rem;
        /* Уменьшение размера шрифта для мобильных устройств */
    }
}

/* Контакты */
.contacts {
    background-color: #ffffff;
    padding: 4rem 2rem;
    box-shadow: 0 4px 16px rgba(0, 0, 0, 0.1);
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    text-align: center;
}

/* Заголовок секции */
.contacts h2 {
    font-size: 2.8rem;
    color: #0047AB;
    margin-bottom: 2rem;
    font-weight: bold;
}

/* Контактная форма */
.contacts .contact-form {
    display: flex;
    flex-direction: column;
    align-items: stretch;
    width: 100%;
    max-width: 600px;
    background-color: #f9f9f9;
    padding: 2rem;
    border-radius: 8px;
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
    gap: 1rem;
}

.contact-form button:hover {
    background-color: #003580;
    transform: translateY(-2px);
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
}

.contacts .contact-form input,
.contacts .contact-form textarea {
    width: 100%;
    padding: 1rem;
    border: 1px solid #ccc;
    border-radius: 8px;
    font-size: 1.1rem;
    box-sizing: border-box;
    word-wrap: break-word;
}

.contacts .contact-form input:focus,
.contacts .contact-form textarea:focus {
    border-color: #0047AB;
    outline: none;
}

.contacts .contact-form button {
    background-color: #0047AB;
    color: white;
    padding: 1rem;
    font-size: 1.1rem;
    border: none;
    border-radius: 8px;
    cursor: pointer;
    transition: background-color 0.3s ease;
    margin-top: 1rem;
}

.contacts .contact-form button:hover {
    background-color: #003580;
}

/* Для адаптивности на мобильных устройствах */
@media (max-width: 768px) {
    .contacts .contact-form {
        padding: 1.5rem;
        width: 100%;
    }

    .contacts h2 {
        font-size: 2rem;
    }
}

/* Футер */
footer {
    background-color: #0047AB;
    color: white;
    text-align: center;
    padding: 3rem 2rem;
    margin-top: 4rem;
    border-top: 2px solid #003580;
}

footer .footer-content {
    max-width: 1200px;
    margin: 0 auto;
}

footer .footer-content p {
    margin: 1rem 0;
    font-size: 1rem;
}

footer .footer-content a {
    color: white;
    text-decoration: none;
    font-weight: normal;
}

footer .footer-content a:hover {
    text-decoration: underline;
}

